2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* script/synce-install-cab.1:
	* script/synce-remove-program.1:
	* tools/man/pcp.1:
	* tools/man/pkillall.1:
	* tools/man/pls.1:
	* tools/man/pmkdir.1:
	* tools/man/pmv.1:
	* tools/man/prm.1:
	* tools/man/prmdir.1:
	* tools/man/prun.1:
	* tools/man/psettime.1:
	* tools/man/pshortcut.1:
	* tools/man/pstatus.1:
	* tools/man/rapiconfig.1:
	* tools/man/synce-list-programs.1:
	* tools/man/synce-registry.1: Escaped minus signs so they're not
	hyphens. Notified by lintian: hyphen-used-as-minus-sign. 

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* Removed spec file.

2008-04-11  Mark Ellis  <mark@mpellis.org.uk>

	* modified rapi_context_connect() to deal with version 5.0
	  that is actually WM2003

2008-04-01  Mark Ellis  <mark@mpellis.org.uk>

	* dummy function for rapi1 CeGetDiskFreeSpaceEx, prevents segfault
	  when this is called

2008-03-26  Mark Ellis  <mark@mpellis.org.uk>

	* correct build without python bindings (bug 1708885)

2008-03-25  Mark Ellis  <mark@mpellis.org.uk>

	* fixed input buffer length in tools/rapiconfig.c
	* fixed rapi1 CeProcessConfig (after a fashion)

2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Rewrote the thread-safe code to make use of pthread_once. Instead of
	using my own mutexes to ensure a key for the TSL was only created once, I
	now use pthread_once to ensure that the create_key method is called only
	once. Thanks David for pointing this out.

2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Renabled the thread-safe code. Segfaults in sync-engine were
	  caused by the fact that sync-engine tried to access rapi_context of 
	  one thread via another thread. Resolved in sync-engine

      became less stable with this. 
2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Put the thread-safety code in ifdef. Turned out that sync-engine
      became less stable with this. 
      Currently thread-safe code has been deactivated till further notice.
