@@ -1,3 +1,7 @@
+2008-04-22  Mark Ellis  <mark@mpellis.org.uk>
+
+	* implemented CeFindNextFile() & CeFindClose() in rapi2
+
 2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>
 
 	* script/synce-install-cab.1:
